fixed the overflow

--- a/login-app-client/src/app/dashboard/dashboard.scss
+++ b/login-app-client/src/app/dashboard/dashboard.scss
@@ -1,6 +1,4 @@
 .container{
-  width:100%;
-  height:100%;
   display: flex;
   padding:10px;
   transition: margin-left 0.3s ease;
